plugins/rhizomedb/testData/firMembers/entityType/withoutCompanion/sealedClass.kt
// File generated by `org.jetbrains.rhizomedb.TestGeneratorKt`. DO NOT MODIFY MANUALLY
import com.jetbrains.rhizomedb.*

<!WRONG_ENTITY_TYPE_TARGET("target cannot be abstract")!>@GeneratedEntityType<!>
sealed class MyEntity : Entity

fun foo() {
    MyEntity.all()
    MyEntity.single()
    MyEntity.singleOrNull()
}
